--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
     <!-- css links -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header start -->
+    <header>
+      <!-- nav start -->
+      <nav>
+        <h2 class="logo"><a href="index.html">Webflow</a></h2>
+        <button class="btn">Sign Up</button>
+      </nav>
+      <!-- nav end -->
+
+      <!-- banner start -->
+      <div class="banner">
+        <h1 class="banner_text">Cool Dark UI Template for Webflow Agencies!</h1>
+        <button class="btn">Stay Focused</button>
+      </div>
+      <!-- banner end -->
+    </header>
+    <!-- header end -->
+  </body>
 </html>
