--- a/index.html
+++ b/index.html
@@ -26,5 +26,56 @@
       <!-- banner end -->
     </header>
     <!-- header end -->
+    <!-- main section start -->
+    <main>
+      <!-- action start -->
+      <section class="action">
+        <div class="action_content">
+          <h2 class="action_title">See It in Action</h2>
+          <p class="action_text">
+            Explore the live preview and imagine your brand in this bold new
+            look.
+          </p>
+          <button class="btn">Launch Live Preview</button>
+        </div>
+        <div class="action_img">
+          <img src="images/wc-mini.png" alt="webflow" />
+        </div>
+      </section>
+      <!-- action end -->
+
+      <!-- join start -->
+      <section class="join">
+        <h2 class="action_title">Joined Thousands of Productive Users</h2>
+        <div class="join_content">
+          <!-- 1st item start-->
+          <div class="join_item">
+            <h3 class="join_text">50K</h3>
+            <p class="join_info">Active Users</p>
+          </div>
+          <!-- 1st item end-->
+
+          <!-- 2nd item start-->
+          <div class="join_item">
+            <h3 class="join_text">2M+</h3>
+            <p class="join_info">Focus Sessions</p>
+          </div>
+          <!-- 2nd item end-->
+
+          <!-- 3rd item start-->
+          <div class="join_item">
+            <h3 class="join_text">95%</h3>
+            <p class="join_info">Satisfaction Rate</p>
+          </div>
+          <!-- 3rd item end-->
+        </div>
+      </section>
+      <!-- join end -->
+
+      <!-- testimonial start -->
+      <section class="testimonial"></section>
+      <!-- testimonial end -->
+    </main>
+    <!-- main section end -->
   </body>
 </html>
