--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <!-- nav start -->
       <nav>
         <h2 class="logo"><a href="index.html">Webflow</a></h2>
-        <button class="btn">Sign Up</button>
+        <button type="submit" class="btn">Sign Up</button>
       </nav>
       <!-- nav end -->
 
       <!-- banner start -->
       <div class="banner">
         <h1 class="banner_text">Cool Dark UI Template for Webflow Agencies!</h1>
-        <button class="btn">Stay Focused</button>
+        <button type="button" class="btn">Stay Focused</button>
       </div>
       <!-- banner end -->
     </header>
@@ -36,7 +36,7 @@
             Explore the live preview and imagine your brand in this bold new
             look.
           </p>
-          <button class="btn">Launch Live Preview</button>
+          <button type="button" class="btn">Launch Live Preview</button>
         </div>
         <div class="action_img">
           <img src="images/wc-mini.png" alt="webflow" />
@@ -73,8 +73,149 @@
       <!-- join end -->
 
       <!-- testimonial start -->
-      <section class="testimonial"></section>
+      <section class="testimonial">
+        <h2 class="action_title">What our users say</h2>
+        <div class="reviews">
+          <!-- 1st item start -->
+          <div class="review_item">
+            <div class="review_icon">
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+            </div>
+            <div class="review_content">
+              <h4 class="review_title">Loved by Designers</h4>
+              <p class="review_text">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+              <div class="reviewer">
+                <div class="reviewer_img">
+                  <img src="images/avatar.png" alt="profile-pic" />
+                </div>
+                <div class="reviewer_details">
+                  <h5 class="reviewer_name">Alexa Stanhill</h5>
+                  <p class="review_date">15/10/2024</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 1st item end -->
+
+          <!-- 2nd item start -->
+          <div class="review_item">
+            <div class="review_icon">
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+            </div>
+            <div class="review_content">
+              <h4 class="review_title">Loved by Designers</h4>
+              <p class="review_text">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+              <div class="reviewer">
+                <div class="reviewer_img">
+                  <img src="images/avatar.png" alt="profile-pic" />
+                </div>
+                <div class="reviewer_details">
+                  <h5 class="reviewer_name">Alexa Stanhill</h5>
+                  <p class="review_date">15/10/2024</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 2nd item end -->
+
+          <!-- 3rd item start -->
+          <div class="review_item">
+            <div class="review_icon">
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+              <img src="images/icon-star.png" alt="review-icon" />
+            </div>
+            <div class="review_content">
+              <h4 class="review_title">Loved by Designers</h4>
+              <p class="review_text">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+              <div class="reviewer">
+                <div class="reviewer_img">
+                  <img src="images/avatar.png" alt="profile-pic" />
+                </div>
+                <div class="reviewer_details">
+                  <h5 class="reviewer_name">Alexa Stanhill</h5>
+                  <p class="review_date">15/10/2024</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 3rd item end -->
+        </div>
+      </section>
       <!-- testimonial end -->
+
+      <!-- focus start -->
+      <section class="focus">
+        <h2 class="action_title">Ready to focus better</h2>
+        <p class="focus_text">
+          This template instantly leveled up our presence.” – Studio Vertex
+        </p>
+        <button type="button" class="btn">Ger Started Free</button>
+        <div class="focus_img">
+          <img src="images/wc-big.png" alt="webflow-max" />
+        </div>
+      </section>
+      <!-- focus end -->
+
+      <!-- contact start -->
+      <div class="contact_section">
+        <section class="contact">
+          <div class="contact_title">
+            <h2 class="contact_text">Let’s Get in Touch</h2>
+          </div>
+          <div class="contact_form">
+            <form>
+              <label for="email" class="contact_label">Email</label> <br />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="example@email.com"
+                class="contact_input"
+              /><br />
+              <label for="text" class="contact_label">Name</label> <br />
+              <input
+                type="text"
+                id="text"
+                name="text"
+                placeholder="Full Name"
+                class="contact_input"
+              /><br />
+              <label for="message" class="contact_label">Message</label> <br />
+              <textarea
+                name="message"
+                id="message"
+                rows="10"
+                cols="65"
+                placeholder="Write Your Message"
+                class="contact_input"
+              ></textarea>
+              <br />
+              <button type="submit" class="btn input-btn">Get In Touch</button>
+            </form>
+          </div>
+        </section>
+      </div>
+      <!-- contact end -->
     </main>
     <!-- main section end -->
   </body>
