--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webflow</title>
+    <title>NoirFlow</title>
 
+    <!-- fav-icon -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- css links -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -13,7 +15,7 @@
     <header>
       <!-- nav start -->
       <nav>
-        <h2 class="logo"><a href="index.html">Webflow</a></h2>
+        <h2 class="logo"><a href="index.html">NoirFlow</a></h2>
         <button type="submit" class="btn">Sign Up</button>
       </nav>
       <!-- nav end -->
@@ -114,18 +116,18 @@
               <img src="images/icon-star.png" alt="review-icon" />
             </div>
             <div class="review_content">
-              <h4 class="review_title">Loved by Designers</h4>
+              <h4 class="review_title">Chosen by Studios</h4>
               <p class="review_text">
-                This template instantly leveled up our presence.” – Studio
-                Vertex
+                <q>Clean design gave us instant credibility boost.</q>
+                – NeoCraft Studio
               </p>
               <div class="reviewer">
                 <div class="reviewer_img">
-                  <img src="images/avatar.png" alt="profile-pic" />
+                  <img src="images/alice.png" alt="profile-pic" />
                 </div>
                 <div class="reviewer_details">
-                  <h5 class="reviewer_name">Alexa Stanhill</h5>
-                  <p class="review_date">15/10/2024</p>
+                  <h5 class="reviewer_name">Alice Wilson</h5>
+                  <p class="review_date">09/01/2025</p>
                 </div>
               </div>
             </div>
@@ -142,18 +144,18 @@
               <img src="images/icon-star.png" alt="review-icon" />
             </div>
             <div class="review_content">
-              <h4 class="review_title">Loved by Designers</h4>
+              <h4 class="review_title">Perfect for Portfolios</h4>
               <p class="review_text">
-                This template instantly leveled up our presence.” – Studio
-                Vertex
+                <q>This layout completely changed our first impression.</q>
+                – LaunchGrid
               </p>
               <div class="reviewer">
                 <div class="reviewer_img">
-                  <img src="images/avatar.png" alt="profile-pic" />
+                  <img src="images/person.png" alt="profile-pic" />
                 </div>
                 <div class="reviewer_details">
-                  <h5 class="reviewer_name">Alexa Stanhill</h5>
-                  <p class="review_date">15/10/2024</p>
+                  <h5 class="reviewer_name">Max Abraham</h5>
+                  <p class="review_date">05/12/2024</p>
                 </div>
               </div>
             </div>
@@ -167,7 +169,11 @@
       <section class="focus">
         <h2 class="action_title">Ready to focus better</h2>
         <p class="focus_text">
-          This template instantly leveled up our presence.” – Studio Vertex
+          <q
+            >We didn’t expect a template to feel this custom. People keep asking
+            who designed our site!</q
+          >
+          – DesignElevate
         </p>
         <button type="button" class="btn">Ger Started Free</button>
         <div class="focus_img">
@@ -197,7 +203,7 @@
                 type="text"
                 id="text"
                 name="text"
-                placeholder="Full Name"
+                placeholder="full name"
                 class="contact_input"
               /><br />
               <label for="message" class="contact_label">Message</label> <br />
@@ -206,7 +212,7 @@
                 id="message"
                 rows="10"
                 cols="65"
-                placeholder="Write Your Message"
+                placeholder="write your message...."
                 class="contact_input"
               ></textarea>
               <br />
@@ -218,5 +224,28 @@
       <!-- contact end -->
     </main>
     <!-- main section end -->
+
+    <!-- footer start -->
+    <footer>
+      <div class="footer_content">
+        <div class="footer_logo">
+          <h2 class="logo logo-footer"><a href="index.html">NoirFlow</a></h2>
+        </div>
+
+        <p class="footer_info">
+          Ready to elevate your online presence? Contact us today to discuss
+          your project and discover how we can bring your vision to life.
+        </p>
+        <div class="footer_links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">How it Works</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
